--- a/Hibernate/pom.xml
+++ b/Hibernate/pom.xml
@@ -21,5 +21,23 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>5.5.7.Final</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/oracle/ojdbc6 -->
+<dependency>
+  <groupId>com.oracle.ojdbc</groupId>
+  <artifactId>ojdbc8</artifactId>
+  <version>19.3.0.0</version>
+</dependency>
+
+    
+    
+    
   </dependencies>
 </project>
